--- a/quo/bin/props/cougaar/adaptdemo.props
+++ b/quo/bin/props/cougaar/adaptdemo.props
@@ -2,20 +2,27 @@
 org.cougaar.lib.quo.kernel.gui=true
 
 #Default Trust
-org.cougaar.node.trustStatus=0
+org.cougaar.node.trustStatus=10
 
 # Link Protocols
 org.cougaar.message.protocol.classes=org.cougaar.core.mts.SSLRMILinkProtocol,org.cougaar.core.mts.RMILinkProtocol,org.cougaar.core.mts.LoopbackLinkProtocol
 
+# Corba ORB
+org.omg.CORBA.ORBClass=org.jacorb.orb.ORB
+org.omg.CORBA.ORBSingletonClass=org.jacorb.orb.ORBSingleton
+
 # Aspects
 org.cougaar.message.transport.aspects=org.cougaar.core.mts.TrafficMaskingGeneratorAspect,org.cougaar.lib.mquo.QuoProxyAspect,org.cougaar.lib.mquo.RemoteSSLAspect,org.cougaar.lib.mquo.TrafficMaskAspect,org.cougaar.core.mts.ForwardMessageLoggingAspect
+
+# STEC Mesh or Local
+org.cougaar.metrics.stec.mesh=false
 
 # Debug
 org.cougaar.message.transport.debug=traffic_masking_generator
 #org.cougaar.message.transport.debug=service
 
 # Thread scheduling
-org.cougaar.thread.running.max=1
+org.cougaar.thread.running.max=9
 
 
 # Compression
