--- a/quo/bin/props/cougaar/adaptdemo.props
+++ b/quo/bin/props/cougaar/adaptdemo.props
@@ -1,39 +1,42 @@
-# RSS/QuO
-org.cougaar.lib.quo.kernel.gui=true
-
-#Default Trust
-org.cougaar.node.trustStatus=10
+#SSL for Naming
+org.cougaar.core.naming.useSSL=true
 
 # Link Protocols
 org.cougaar.message.protocol.classes=org.cougaar.core.mts.SSLRMILinkProtocol,org.cougaar.core.mts.RMILinkProtocol,org.cougaar.core.mts.LoopbackLinkProtocol
 
 # Corba ORB
+# Enables STEC
 org.omg.CORBA.ORBClass=org.jacorb.orb.ORB
 org.omg.CORBA.ORBSingletonClass=org.jacorb.orb.ORBSingleton
 
 # Aspects
-org.cougaar.message.transport.aspects=org.cougaar.core.mts.TrafficMaskingGeneratorAspect,org.cougaar.lib.mquo.QuoProxyAspect,org.cougaar.lib.mquo.RemoteSSLAspect,org.cougaar.lib.mquo.TrafficMaskAspect,org.cougaar.core.mts.ForwardMessageLoggingAspect
+#org.cougaar.core.mts.ForwardMessageLoggingAspect
+org.cougaar.message.transport.aspects=org.cougaar.core.mts.TrafficMaskingGeneratorAspect,org.cougaar.lib.mquo.QuoProxyAspect,org.cougaar.lib.mquo.RemoteSSLAspect,org.cougaar.lib.mquo.TrafficMaskAspect
 
 # STEC Mesh or Local
 org.cougaar.metrics.stec.mesh=false
 
-# Debug
-org.cougaar.message.transport.debug=traffic_masking_generator
-#org.cougaar.message.transport.debug=service
-
 # Thread scheduling
 org.cougaar.thread.running.max=9
-
 
 # Compression
 #org.cougaar.lib.quo.UseCompression=true
 org.cougaar.lib.quo.wrapper=org.cougaar.lib.mquo.CompressWrapper
 
+# RSS/QuO
+org.cougaar.lib.quo.kernel.gui=true
 
-# RemoteSSL
+# Debug
+org.cougaar.message.transport.debug=traffic_masking_generator
+#org.cougaar.message.transport.debug=service
+
+#Default Trust
+org.cougaar.node.trustStatus=0
+
+# Force RemoteSSL
 #org.cougaar.lib.quo.UseSSL=true
 
-#Traffic Masking
+# Force Traffic Masking
 # org.cougaar.lib.quo.UseMasking=true
 
 
