--- a/quo/bin/props/cougaar/ssl.props
+++ b/quo/bin/props/cougaar/ssl.props
@@ -2,6 +2,7 @@
 # Enables the STEC
 org.omg.CORBA.ORBClass=org.jacorb.orb.ORB
 org.omg.CORBA.ORBSingletonClass=org.jacorb.orb.ORBSingleton
+jacorb.verbosity=0
 
 # SSL for naming
 org.cougaar.core.naming.useSSL=true
