--- a/quo/bin/props/cougaar/traffic.props
+++ b/quo/bin/props/cougaar/traffic.props
@@ -8,6 +8,7 @@ org.cougaar.message.protocol.classes=org.cougaar.core.mts.SSLRMILinkProtocol,org
 # Enables STEC
 org.omg.CORBA.ORBClass=org.jacorb.orb.ORB
 org.omg.CORBA.ORBSingletonClass=org.jacorb.orb.ORBSingleton
+jacorb.verbosity=0
 
 # Aspects
 #org.cougaar.core.mts.ForwardMessageLoggingAspect
