smarter makefile and more scripts

--- a/quo/bin/Makefile
+++ b/quo/bin/Makefile
@@ -2,101 +2,19 @@
 # (c) Copyright 2001  BBNT Solutions, LLC
 # =====================================================================
 
-LINKS := Node.dev
-LINKS += QuoNode.dev
-LINKS += SSLNode.dev
-LINKS += AdaptDemoNode.dev
-LINKS += CorbaNode.dev
-LINKS += ComboNode.dev
-LINKS += FutileNode.dev
-LINKS += LoggingNode.dev
-LINKS += MulticastNode.dev
-LINKS += MetricsNode.dev
-LINKS += NoisyNode.dev
-LINKS += PreSerializeNode.dev
-LINKS += RemoteSSLNode.dev
-LINKS += SecureNode.dev
-LINKS += SeqNode.dev
-LINKS += SerializeNode.dev
-LINKS += SimpleNode.dev
-LINKS += StatNode.dev
-LINKS += StepNode.dev
-LINKS += ThreadNode.dev
-LINKS += TraceNode.dev
-LINKS += TrafficMaskNode.dev
+.SUFFIXES : .dev .sh
+
+nodes=$(wildcard *Node)
+#links=$(foreach file, $(nodes), $(file).dev)
+links=$(addsuffix .dev, $(nodes))
+
+%.dev: 
+	ln -s devwrapper $@
 
 
-
-install: $(LINKS)
-
-Node.dev:
-	ln -s devwrapper Node.dev
-
-QuoNode.dev:
-	ln -s devwrapper QuoNode.dev
-
-SSLNode.dev:
-	ln -s devwrapper SSLNode.dev
-
-AdaptDemoNode.dev:
-	ln -s devwrapper AdaptDemoNode.dev
-
-CorbaNode.dev:
-	ln -s devwrapper CorbaNode.dev
-
-ComboNode.dev:
-	ln -s devwrapper ComboNode.dev
-
-FutileNode.dev:
-	ln -s devwrapper FutileNode.dev
-
-LoggingNode.dev:
-	ln -s devwrapper LoggingNode.dev
-
-MulticastNode.dev:
-	ln -s devwrapper MulticastNode.dev
-
-MetricsNode.dev:
-	ln -s devwrapper MetricsNode.dev
-
-NoisyNode.dev:
-	ln -s devwrapper NoisyNode.dev
-
-PreSerializeNode.dev:
-	ln -s devwrapper PreSerializeNode.dev
-
-
-RemoteSSLNode.dev:
-	ln -s devwrapper RemoteSSLNode.dev
-
-SecureNode.dev:
-	ln -s devwrapper SecureNode.dev
-
-SeqNode.dev:
-	ln -s devwrapper SeqNode.dev
-
-SerializeNode.dev:
-	ln -s devwrapper SerializeNode.dev
-
-SimpleNode.dev:
-	ln -s devwrapper SimpleNode.dev
-
-StatNode.dev:
-	ln -s devwrapper StatNode.dev
-
-StepNode.dev:
-	ln -s devwrapper StepNode.dev
-
-
-TraceNode.dev:
-	ln -s devwrapper TraceNode.dev
-
-ThreadNode.dev:
-	ln -s devwrapper ThreadNode.dev
-
-TrafficMaskNode.dev:
-	ln -s devwrapper TrafficMaskNode.dev
+install: $(links)
 
 clean:
-	rm -f $(LINKS)
+	rm -f *.dev
+
 
