--- a/quo/bin/props/cougaar/adaptdemo.props
+++ b/quo/bin/props/cougaar/adaptdemo.props
@@ -15,7 +15,7 @@ jacorb.verbosity=0
 org.cougaar.message.transport.aspects=org.cougaar.core.mts.TrafficMaskingGeneratorAspect,org.cougaar.lib.mquo.QuoProxyAspect,org.cougaar.lib.mquo.RemoteSSLAspect,org.cougaar.lib.mquo.TrafficMaskAspect
 
 # STEC Mesh or Local
-org.cougaar.metrics.stec.mesh=false
+org.cougaar.metrics.stec.mesh=true
 
 # Thread scheduling
 org.cougaar.thread.running.max=9
@@ -29,7 +29,9 @@ org.cougaar.lib.quo.kernel.gui=true
 
 # Debug
 #org.cougaar.message.transport.debug=traffic_masking_generator
+#com.bbn.quo.rss.debug=true
 #org.cougaar.message.transport.debug=service
+#com.bbn.quo.event.debug=true
 
 #Default Trust
 org.cougaar.node.trustStatus=0
@@ -39,5 +41,4 @@ org.cougaar.node.trustStatus=0
 
 # Force Traffic Masking
 # org.cougaar.lib.quo.UseMasking=true
-
 
