new MetricsUpdateService class, and get rid of the most remaining TopologyService calls

--- a/qos/Makefile
+++ b/qos/Makefile
@@ -2,7 +2,7 @@ COUGAARJAR=${COUGAAR_SRC_PATH}/core/newcore.jar:${COUGAAR_SRC_PATH}/util/newutil
 
 COUGAAR3RDPARTY=${COUGAAR_SRC_PATH}/quo/dev/3rdparty
 
-CLASSPATH=${COUGAARJAR}:${COUGAAR3RDPARTY}/QuoRSS.jar:${COUGAAR3RDPARTY}/event.jar:.
+CLASSPATH=${COUGAARJAR}:${COUGAAR3RDPARTY}/quoSumo.jar
 #CLASSPATH=${COUGAAR_INSTALL_PATH}/lib/core.jar:${QUO_ROOT}/lib/quoSumo.jar
 
 export CLASSPATH
