--- a/quo/build.xml
+++ b/quo/build.xml
@@ -167,7 +167,7 @@
     
     <!-- jarfiles required by this module, relative to various other paths -->
     <!-- WARNING: Only relative paths work here. -->
-    <property name="compile.jarlist" value="${target.lib}/core.jar,${target.lib}/planning.jar,${target.lib}/qos.jar,${target.lib}/util.jar,${target.sys}/quoSumo.jar,${target.sys}/jacorb.jar,${target.sys}/xerces.jar"/>
+    <property name="compile.jarlist" value="${target.lib}/core.jar,${target.lib}/planning.jar,${target.lib}/qos.jar,${target.lib}/util.jar,${target.sys}/quoSumo.jar,${target.sys}/xerces.jar"/>
     <!-- Put absolute paths on this list, in the form of a path. -->
     <property name="compile.abs.jarlist" value=""/>
 
@@ -176,7 +176,7 @@
 
     <!-- Extra jars needed at run / unit-test time. -->
     <!-- WARNING: Only relative paths work here. -->
-    <property name="run.jarlist" value="${target.lib}/core.jar,${target.lib}/planning.jar,${target.lib}/qos.jar,${target.lib}/util.jar,${target.sys}/quoSumo.jar,${target.sys}/jacorb.jar,${target.sys}/xerces.jar"/>
+    <property name="run.jarlist" value="${target.lib}/core.jar,${target.lib}/planning.jar,${target.lib}/qos.jar,${target.lib}/util.jar,${target.sys}/quoSumo.jar,${target.sys}/xerces.jar"/>
     <!-- Put absolute paths on this list, in the form of a path. -->
     <property name="run.abs.jarlist" value=""/>
     
