--- a/quo/bin/props/cougaar/combo.props
+++ b/quo/bin/props/cougaar/combo.props
@@ -1,7 +1,7 @@
-org.cougaar.message.protocol.classes=org.cougaar.core.mts.LoopbackLinkProtocol,org.cougaar.lib.mquo.CorbaLinkProtocol
+org.cougaar.message.protocol.classes=org.cougaar.mts.std.LoopbackLinkProtocol,org.cougaar.lib.mquo.CorbaLinkProtocol
 
 org.cougaar.message.security=org.cougaar.core.node.DummyMessageSecurityManager
 
 org.cougaar.message.transport.debug=aspects
 
-org.cougaar.message.transport.aspects=org.cougaar.core.mts.SerializationAspect,org.cougaar.core.mts.SequenceAspect,org.cougaar.core.mts.SecurityAspect
+org.cougaar.message.transport.aspects=org.cougaar.mts.std.SerializationAspect,org.cougaar.mts.std.SequenceAspect,org.cougaar.mts.std.SecurityAspect
