--- a/quo/bin/props/cougaar/compression.props
+++ b/quo/bin/props/cougaar/compression.props
@@ -2,4 +2,4 @@ org.cougaar.lib.quo.wrapper=org.cougaar.lib.mquo.CompressWrapper
 org.cougaar.lib.quo.UseCompression=true
 org.cougaar.lib.quo.kernel.gui=true
 # org.cougaar.message.useLocalDelivery=false
-org.cougaar.message.transport.aspects=org.cougaar.lib.mquo.QuoProxyAspect,org.cougaar.core.mts.MetricsTestAspect
+org.cougaar.message.transport.aspects=org.cougaar.lib.mquo.QuoProxyAspect,org.cougaar.mts.std.MetricsTestAspect
