--- a/quo/data/adaptdemo.props
+++ b/quo/data/adaptdemo.props
@@ -7,10 +7,10 @@ org.cougaar.lib.quo.kernel.gui=true
 
 # Link Protocols
 org.cougaar.message.transport.aspects=org.cougaar.lib.mquo.RemoteSSLAspect
-org.cougaar.message.protocol.classes=org.cougaar.core.mts.SSLRMILinkProtocol,org.cougaar.core.mts.RMILinkProtocol,org.cougaar.core.mts.LoopbackLinkProtocol
+org.cougaar.message.protocol.classes=org.cougaar.mts.std.SSLRMILinkProtocol,org.cougaar.mts.std.RMILinkProtocol,org.cougaar.mts.std.LoopbackLinkProtocol
 
 # Aspects
-org.cougaar.message.transport.aspects=org.cougaar.lib.mquo.QuoProxyAspect,org.cougaar.lib.mquo.RemoteSSLAspect,org.cougaar.lib.mquo.TrafficMaskAspect,org.cougaar.core.mts.StatisticsAspect
+org.cougaar.message.transport.aspects=org.cougaar.lib.mquo.QuoProxyAspect,org.cougaar.lib.mquo.RemoteSSLAspect,org.cougaar.lib.mquo.TrafficMaskAspect,org.cougaar.mts.std.StatisticsAspect
 
 # Debug
 org.cougaar.message.transport.debug=none
