--- a/ping/build.xml
+++ b/ping/build.xml
@@ -1,4 +1,4 @@
-<!-- Autobuild-generated ANT v1.5 script for building the Cougaar module "core". -->
+<!-- Autobuild-generated ANT v1.5 script for building the Cougaar module "ping". -->
 
 <!--                                                 -->
 <!-- THIS IS A MACHINE GENERATED FILE - DO NOT EDIT! -->
@@ -7,7 +7,7 @@
 <!-- The source for this file is in build/data/moduleTemplate.xml -->
 
 <!-- autobuild might execute this with something like:
-  ant -DTARGETBASE=/tmp/target -DMODSOURCE=/tmp/cougaar/latest/src/ping
+  ant -DTARGETBASE=/tmp/target -DMODSOURCE=/tmp/cougaar/latest/src/ping 
       -DTMP=/tmp/tmpdir                                           -->
 
 <!-- Instructions for individual users:
@@ -101,7 +101,7 @@
     <!-- Include extra debug info in compilations -->
     <property name="build.compiler.debug" value="on"/>
     <!-- Do not include deprecation warnings -->
-    <property name="build.compiler.deprecation" value="off"/>
+    <property name="build.compiler.deprecation" value="on"/>
     <!-- Don't exclude basic debug info -->
     <property name="build.compiler.optimize" value="off"/>
 
@@ -125,6 +125,8 @@
     <property name="target.sys" value="${TARGETBASE}/sys" />
     <!-- clib is for cougaar compile-time jars (codegen, etc) -->
     <property name="target.clib" value="${TARGETBASE}/clib" />
+    <!-- pmd is for PMD compile-time jars -->
+    <property name="target.pmd" value="${TARGETBASE}/pmd-1.5/lib" />
     <!-- dir is which of lib or clib the jar gets installed to -->
     <property name="target.dir" value="${TARGETBASE}/lib"/>
 
@@ -167,16 +169,16 @@
     
     <!-- jarfiles required by this module, relative to various other paths -->
     <!-- WARNING: Only relative paths work here. -->
-    <property name="compile.jarlist" value="${target.lib}/bootstrap.jar,${target.lib}/util.jar,${target.sys}/log4j.jar,${target.sys}/servlet.jar,${target.sys}/concurrent.jar,${target.lib}/core.jar"/>
+    <property name="compile.jarlist" value="${target.lib}/core.jar,${target.lib}/planning.jar,${target.lib}/qos.jar,${target.lib}/quo.jar,${target.lib}/util.jar,${target.lib}/mtsstd.jar,${target.sys}/quoSumo.jar,${target.sys}/servlet.jar"/>
     <!-- Put absolute paths on this list, in the form of a path. -->
     <property name="compile.abs.jarlist" value=""/>
 
     <!-- javadoc package spec for building javadocs -->
-    <property name="javadoc.packages" value="org.cougaar,org.cougaar.ping"/>
+    <property name="javadoc.packages" value="org.cougaar.ping"/>
 
     <!-- Extra jars needed at run / unit-test time. -->
     <!-- WARNING: Only relative paths work here. -->
-    <property name="run.jarlist" value="${target.lib}/bootstrap.jar,${target.lib}/util.jar,${target.sys}/log4j.jar,${target.sys}/servlet.jar,${target.sys}/concurrent.jar"/>
+    <property name="run.jarlist" value="${target.lib}/core.jar,${target.lib}/planning.jar,${target.lib}/qos.jar,${target.lib}/quo.jar,${target.lib}/util.jar,${target.lib}/mtsstd.jar,${target.sys}/quoSumo.jar,${target.sys}/servlet.jar"/>
     <!-- Put absolute paths on this list, in the form of a path. -->
     <property name="run.abs.jarlist" value=""/>
     
@@ -265,6 +267,27 @@
     <!-- ========================================================== -->
     <target name="junit" depends="prepare" if="has.regress">
       <available property="junit.present" classname="junit.framework.TestCase" classpathref="junit.classpath"/>
+    </target>
+
+    <!-- ========================================================== -->
+    <!-- Test for presence of PMD. Skip PMD targets if not found. -->
+    <!-- ========================================================== -->
+    <target name="pmd" depends="prepare" if="has.pmd">
+      <taskdef name="pmd" classname="net.sourceforge.pmd.ant.PMDTask">
+        <classpath>
+          <pathelement location="${target.pmd}/jaxen-core-1.0-fcs.jar"/>
+          <pathelement location="${target.pmd}/pmd-1.5.jar"/>
+          <pathelement location="${target.pmd}/saxpath-1.0-fcs.jar"/>
+          <pathelement location="${target.pmd}/xercesImpl-2.0.2.jar"/>
+          <pathelement location="${target.pmd}/xmlParserAPIs-2.0.2.jar"/>
+        </classpath>
+      </taskdef>
+      <pmd rulesetfiles="rulesets/basic.xml,rulesets/braces.xml,rulesets/codesize.xml,rulesets/controversial.xml,rulesets/coupling.xml,rulesets/design.xml,rulesets/favorites.xml,rulesets/finalizers.xml,rulesets/imports.xml,rulesets/javabeans.xml,rulesets/junit.xml,rulesets/naming.xml,rulesets/newrules.xml,rulesets/scratchpad.xml,rulesets/strictexception.xml,rulesets/strings.xml,rulesets/unusedcode.xml">
+        <formatter type="html" toFile="${module}_report.html"/>
+        <fileset dir="${src}" >
+          <include name="**/*.java"/>
+        </fileset>
+      </pmd>
     </target>
 
     <!-- ========================================================== -->
@@ -361,6 +384,7 @@
       <available property="has.dev" file="${dev}"/>
       <available property="has.doc" file="${doc}"/>
       <available property="has.regress" file="${regress}"/>
+      <available property="has.pmd" file="${target.pmd}"/>
       <available property="has.lib" file="${local.lib}"/>
       
       <!-- Create the timestamp -->
@@ -401,7 +425,7 @@
     <!-- ========================================================== -->
     <!-- Compiles the Module Code			                -->
     <!-- ========================================================== -->	
-    <target name="compile" depends="prepare, defrunner, really-compile"
+    <target name="compile" depends="prepare, defrunner, really-compile, rmic-source"
 	    description="Compile the source Code"> </target>
 
     <!-- See if the jarfile needs recompiling -->
@@ -711,41 +735,4 @@
 	<fileset dir="${doc}" />
       </copy>
     </target>
-
-    <!-- ====================================================================== -->
-    <!-- Create Ping Overlay Stuff  -->
-    <!-- ====================================================================== -->
-   <property environment="env"/>
-   <property name="cougaar" value="${env.COUGAAR_INSTALL_PATH}"/>
-   <property name="zip" value="ping.zip"/>
-    
-	<target name="create-overlay-manifest">
-		<tstamp>
-			<format property="build.time" pattern="MM/dd/yyyy hh:mm aa"/>
-		</tstamp>
-		<mkdir dir="Manifest"/>
-		<echo file="Manifest/${ant.project.name}.txt" append="no">NAME=${ant.project.name}
-ARCHIVE_TIME=${build.time}
-</echo>
-		</target>
-
-	<target name="delete">
-      <delete dir="staging"/>
-      <mkdir dir="staging"/>
-			<antcall target="create-overlay-manifest"/>
-			<move todir="staging/Manifest">
-				<fileset dir="Manifest"/>
-			</move>
-  </target>
-	<target name="create_ping_overlay" depends="delete">
-		<copy todir="staging/configs"><fileset dir="configs"/></copy>
-		<copy todir="staging/workspace">
-			<fileset dir="workspace"/>
-		</copy>    
-    <copy file="configs/ping-dynamic/RunMiniPingActions.rb" todir="staging/csmart/scripts/"/>
-		<copy todir="staging/Logs"><fileset dir="workspace"/></copy>
-    <exec dir="." executable="./overlayhelper.sh" os="Linux">
-      <arg line=" ${zip} "/>
-    </exec>
-	</target>
 </project>
