--- a/qos/build.xml
+++ b/qos/build.xml
@@ -174,7 +174,7 @@
     <property name="compile.abs.jarlist" value=""/>
 
     <!-- javadoc package spec for building javadocs -->
-    <property name="javadoc.packages" value="org.cougaar.core.qos.ca,org.cougaar.core.qos.frame,org.cougaar.core.qos.gossip,org.cougaar.core.qos.rss,org.cougaar.core.qos.tmatrix,org.cougaar.core.qos.rss,org.cougaar.core.qos.frame.visualizer"/>
+    <property name="javadoc.packages" value="org.cougaar.core.qos.ca,org.cougaar.core.qos.frame,org.cougaar.core.qos.gossip,org.cougaar.core.qos.rss,org.cougaar.core.qos.tmatrix,org.cougaar.core.qos.rss,org.cougaar.core.qos.frame.visualizer,org.cougaar.core.qos.frame.visualizer.layout,org.cougaar.core.qos.frame.visualizer.test,org.cougaar.core.qos.frame.visualizer.tree,org.cougaar.core.qos.frame.visualizer.util"/>
 
     <!-- Extra jars needed at run / unit-test time. -->
     <!-- WARNING: Only relative paths work here. -->
