include clp files in the jar

--- a/qos/build.xml
+++ b/qos/build.xml
@@ -235,6 +235,7 @@
       <include name="**/*.properties"/>
       <include name="**/*.xml"/>
       <include name="**/*.dtd"/>
+      <include name="**/*.clp"/>
       <include name="**/*.wav"/>
       <include name="**/*.au"/>
     </patternset>
