--- a/qos/run/logging.properties
+++ b/qos/run/logging.properties
@@ -19,7 +19,8 @@ log4j.category.com.bbn.rss.sysstat.DirectSysStatSupplier=ERROR,A1
 log4j.category.org.cougaar.core.agent.service.alarm.ExecutionTimer=ERROR,A1
 log4j.category.org.cougaar.core.service.SuicideService=ERROR,A1
 log4j.category.org.cougaar.core.qos.frame.scale=ERROR,A1
-log4j.category.org.cougaar.mts=ERROR,A1
+#log4j.category.org.cougaar.mts.jms=INFO,A1
+#log4j.category.org.cougaar.core.wp=WARN,A1
 
 # enable BeginLogger for both A1 and A2
 log4j.category.org.cougaar.core.agent.BeginLogger=INFO,A1,A2
