Split quoSumo.jar into two components: the resource status service (used by the qos module) and quo kernel (used by the quo module)

--- a/qos/.classpath
+++ b/qos/.classpath
@@ -7,6 +7,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/mtsstd"/>
 	<classpathentry kind="lib" path="/jars/lib/log4j.jar"/>
 	<classpathentry kind="lib" path="/jars/lib/servlet.jar"/>
-	<classpathentry kind="lib" path="/jars/lib/quoSumo.jar"/>
+	<classpathentry exported="true" kind="lib" path="/jars/lib/resource-status-service.jar"/>
 	<classpathentry kind="output" path="tmp/classes"/>
 </classpath>
