--- a/quo/build.xml
+++ b/quo/build.xml
@@ -169,7 +169,7 @@
     
     <!-- jarfiles required by this module, relative to various other paths -->
     <!-- WARNING: Only relative paths work here. -->
-    <property name="compile.jarlist" value="${target.lib}/core.jar,${target.lib}/planning.jar,${target.lib}/qos.jar,${target.lib}/util.jar,${target.lib}/mtsstd.jar,${target.sys}/quoSumo.jar"/>
+    <property name="compile.jarlist" value="${target.lib}/core.jar,${target.lib}/planning.jar,${target.lib}/qos.jar,${target.lib}/util.jar,${target.lib}/mtsstd.jar,${target.sys}/resource-status-service.jar,${target.sys}/quo-core.jar"/>
     <!-- Put absolute paths on this list, in the form of a path. -->
     <property name="compile.abs.jarlist" value=""/>
 
@@ -178,7 +178,7 @@
 
     <!-- Extra jars needed at run / unit-test time. -->
     <!-- WARNING: Only relative paths work here. -->
-    <property name="run.jarlist" value="${target.lib}/core.jar,${target.lib}/planning.jar,${target.lib}/qos.jar,${target.lib}/util.jar,${target.lib}/mtsstd.jar,${target.sys}/quoSumo.jar"/>
+    <property name="run.jarlist" value="${target.lib}/core.jar,${target.lib}/planning.jar,${target.lib}/qos.jar,${target.lib}/util.jar,${target.lib}/mtsstd.jar,${target.sys}/resource-status-service.jar,${target.sys}/quo-core.jar"/>
     <!-- Put absolute paths on this list, in the form of a path. -->
     <property name="run.abs.jarlist" value=""/>
     
