--- a/qos/.classpath
+++ b/qos/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry kind="lib" path="/jars/lib/log4j.jar"/>
 	<classpathentry kind="lib" path="/jars/lib/servlet.jar"/>
 	<classpathentry exported="true" kind="lib" path="/jars/lib/resource-status-service.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/bootstrap"/>
 	<classpathentry kind="output" path="tmp/classes"/>
 </classpath>
