Updated Frame set examples to use new Templates style of society specification

--- a/qos/bin/logging.properties
+++ b/qos/bin/logging.properties
@@ -1,46 +1,19 @@
-# always set root to fatal
-log4j.rootCategory=FATAL
-
-# -------------------------------------------------------------------
-# first logger
-
-# write to console
+# prepare log4j
+log4j.rootCategory=WARN,A1
 log4j.appender.A1=org.apache.log4j.ConsoleAppender
 log4j.appender.A1.layout=org.apache.log4j.PatternLayout
-log4j.appender.A1.layout.ConversionPattern=%d{ABSOLUTE} %-5p - %c{1} - %m%n
+log4j.appender.A1.layout.ConversionPattern=%d{ISO8601} %-5p [%c{1}] - %m%n
 
-# enable WARN for all categories to A1
-log4j.category=WARN,A1
-
-# turn off some categories for A1
-log4j.category.org.cougaar.planning.ldm.lps.ComplainingLP=ERROR,A1
-log4j.category.org.cougaar.core.blackboard.Subscription=ERROR,A1
-log4j.category.com.bbn.rss.sysstat.DirectSysStatSupplier=ERROR,A1
-log4j.category.org.cougaar.core.agent.service.alarm.ExecutionTimer=ERROR,A1
-log4j.category.org.cougaar.core.service.SuicideService=ERROR,A1
-log4j.category.org.cougaar.core.qos.frame.scale=ERROR,A1
-log4j.category.org.cougaar.mts.jms=INFO,A1
-#log4j.category.org.cougaar.core.wp=WARN,A1
-
-# enable BeginLogger for both A1 and A2
-log4j.category.org.cougaar.core.agent.BeginLogger=INFO,A1,A2
-
-# enable EndLogger for A1
-log4j.category.org.cougaar.core.agent.EndLogger=INFO,A1
-
-# -------------------------------------------------------------------
-# second logger
-
-# write to file
-log4j.appender.A2=org.apache.log4j.FileAppender
-log4j.appender.A2.File=event.log
-log4j.appender.A2.layout=org.apache.log4j.PatternLayout
-log4j.appender.A2.layout.ConversionPattern=%d{ABSOLUTE} %-5p - %c{1} - %m%n
+# turn off some categories
+log4j.category.org.cougaar.planning.ldm.lps.ComplainingLP=ERROR
+log4j.category.org.cougaar.core.blackboard.Subscription=ERROR
+log4j.category.com.bbn.rss.sysstat.DirectSysStatSupplier=ERROR
+log4j.category.org.cougaar.core.agent.service.alarm.ExecutionTimer=ERROR
+log4j.category.org.cougaar.core.service.SuicideService=ERROR
 
 
+# enable "EVENT.*"
+log4j.category.EVENT=DEBUG
 
-# enable "EVENT.*" for A2
-log4j.category.EVENT=DEBUG,A2
-
-# enable mmpc for A2
-log4j.category.org.cougaar.qos=INFO,A2
+# frameset log level
+log4j.category.org.cougaar.core.qos.frame=WARN
