Use the cougaar standard classes directory 'tmp/classes'

--- a/qrs/.classpath
+++ b/qrs/.classpath
@@ -3,5 +3,5 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="/jars/lib/log4j.jar"/>
-	<classpathentry kind="output" path="classes"/>
+	<classpathentry kind="output" path="tmp/classes"/>
 </classpath>
