--- a/qos/.classpath
+++ b/qos/.classpath
@@ -5,7 +5,7 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/core"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/util"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/mtsstd"/>
-	<classpathentry exported="true" kind="lib" path="/jars/lib/resource-status-service.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/bootstrap"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/qrs"/>
 	<classpathentry kind="output" path="tmp/classes"/>
 </classpath>
