--- a/qos/build.xml
+++ b/qos/build.xml
@@ -173,7 +173,7 @@
     
     <!-- jarfiles required by this module, relative to various other paths -->
     <!-- WARNING: Only relative paths work here. -->
-    <property name="compile.jarlist" value="${target.lib}/core.jar,${target.lib}/util.jar,${target.lib}/bootstrap.jar,${target.lib}/mtsstd.jar,${target.sys}/resource-status-service.jar,${target.sys}/servlet.jar,${target.lib}/community.jar"/>
+    <property name="compile.jarlist" value="${target.lib}/core.jar,${target.lib}/util.jar,${target.lib}/bootstrap.jar,${target.lib}/mtsstd.jar,${target.lib}/qrs.jar,${target.sys}/servlet.jar,${target.lib}/community.jar"/>
     <!-- Put absolute paths on this list, in the form of a path. -->
     <property name="compile.abs.jarlist" value=""/>
 
@@ -182,7 +182,7 @@
 
     <!-- Extra jars needed at run / unit-test time. -->
     <!-- WARNING: Only relative paths work here. -->
-    <property name="run.jarlist" value="${target.lib}/core.jar,${target.lib}/util.jar,${target.lib}/bootstrap.jar,${target.lib}/mtsstd.jar,${target.sys}/resource-status-service.jar,${target.sys}/servlet.jar,${target.lib}/community.jar"/>
+    <property name="run.jarlist" value="${target.lib}/core.jar,${target.lib}/util.jar,${target.lib}/bootstrap.jar,${target.lib}/mtsstd.jar,${target.lib}/qrs.jar,${target.sys}/servlet.jar,${target.lib}/community.jar"/>
     <!-- Put absolute paths on this list, in the form of a path. -->
     <property name="run.abs.jarlist" value=""/>
     
