--- a/qrs/build.xml
+++ b/qrs/build.xml
@@ -173,7 +173,7 @@
     
     <!-- jarfiles required by this module, relative to various other paths -->
     <!-- WARNING: Only relative paths work here. -->
-    <property name="compile.jarlist" value="${target.sys}/log4j.jar"/>
+    <property name="compile.jarlist" value="${target.lib}/util.jar,${target.sys}/log4j.jar"/>
     <!-- Put absolute paths on this list, in the form of a path. -->
     <property name="compile.abs.jarlist" value=""/>
 
@@ -182,7 +182,7 @@
 
     <!-- Extra jars needed at run / unit-test time. -->
     <!-- WARNING: Only relative paths work here. -->
-    <property name="run.jarlist" value="${target.sys}/log4j.jar"/>
+    <property name="run.jarlist" value="${target.lib}/util.jar,${target.sys}/log4j.jar"/>
     <!-- Put absolute paths on this list, in the form of a path. -->
     <property name="run.abs.jarlist" value=""/>
     
