--- a/profile/.classpath
+++ b/profile/.classpath
@@ -4,5 +4,5 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/core"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/util"/>
-	<classpathentry kind="output" path="classes"/>
+	<classpathentry kind="output" path="tmp/classes"/>
 </classpath>
