--- a/qos/.classpath
+++ b/qos/.classpath
@@ -7,5 +7,7 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/mtsstd"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/bootstrap"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/qrs"/>
+	<classpathentry kind="lib" path="/jars/lib/log4j.jar"/>
+	<classpathentry kind="lib" path="/jars/lib/servlet.jar"/>
 	<classpathentry kind="output" path="tmp/classes"/>
 </classpath>
