--- a/profile/.project
+++ b/profile/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>qos</name>
+	<name>profile</name>
 	<comment></comment>
 	<projects>
 	</projects>
